feat: get(0)을 getFirst로 변경